# vr_prog1_2020

./: static_cast_example.cpp
example_clickergame/: .gitignore  CMakeLists.txt  build.sh  main.cpp  scenecontroller.cpp  scenecontroller.hpp  sprite.cpp  sprite.hpp  spritemanager.cpp  spritemanager.hpp
example_primitive_gamestate/: CMakeLists.txt  MenuState.cpp  MenuState.h  PlayState.cpp  game.h  main.cpp
example_primitive_menu/: .gitignore  BaseGameState.h  Button.h  ButtonMenu.cpp  ButtonMenu.h  CMakeLists.txt  MainMenu.h  MenuState.cpp  MenuState.h  Panel.cpp  Panel.h  PlayState.h  game.h  main.cpp
